# HospitalManagemet

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
include/: Doctor.h  HealthCareProfessional.h  HospitalManagement.h  Nurse.h  Patient.h  Schedule.h  Specialist.h  inputHandler.h
